# gpt-tui-rs

./: Cargo.toml  LICENSE  README.md
config/: config.json
src/: app.rs  config.rs  db.rs  main.rs  models.rs  ui.rs
