[package]
name = "gpt-tui-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.22.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
reqwest = { version = "0.11.6", features = ["json"] }
